<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="notif_settings">

    <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_termin"
            android:summary="@string/notif_termin_summ"
            android:title="@string/notif_termin" />

        <ListPreference
            android:id="@+id/pref_pre_event_time"
            android:dialogTitle="@string/pref_font_list"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_notif_key"
            android:title="@string/pref_notif"
            android:summary="%s"
            android:defaultValue="15"/>

    </PreferenceCategory>

    <PreferenceCategory


        android:title="@string/font"
        android:key="font_settings">
        <ListPreference

            android:dialogTitle="@string/pref_font"
            android:entries="@array/pref_fontTypes_entries"
            android:entryValues="@array/pref_fontTypes_values"
            android:key="@string/pref_font_key"
            android:title="@string/pref_font_title"
            android:summary="%s"
            android:defaultValue="Medium"/>


    </PreferenceCategory>



</PreferenceScreen>