<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_margin="25dp"></EditText>
        <EditText
            android:id="@+id/Lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:layout_below="@id/Name"
            android:inputType="text"
            android:layout_margin="25dp"></EditText>
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_below="@id/Lastname"
            android:inputType="textPassword"
            android:layout_margin="25dp"></EditText>
        <EditText
            android:id="@+id/RepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:layout_below="@id/Password"
            android:inputType="textPassword"
            android:layout_margin="25dp"></EditText>
        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_below="@id/RepeatPassword"
            android:inputType="text"
            android:layout_margin="25dp"></EditText>
        <EditText
            android:id="@+id/City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_below="@id/Username"
            android:inputType="text"
            android:layout_margin="25dp"></EditText>
        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_below="@id/City"
            android:inputType="text"
            android:layout_margin="25dp"></EditText>
        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@id/Email"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextWhite"/>
    </RelativeLayout>
</ScrollView>