<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#AACCEE"
    >

    <TextView
        android:id="@+id/commentTextTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:text="@string/commentText"
        android:textSize="16dp"
        />

    <TextView
        android:id="@+id/commentUser"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commentTextTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="25dp"
        android:textSize="14dp"
        android:text="@string/commentUser" />

    <TextView
        android:id="@+id/commentDate"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commentTextTextView"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/commentUser"
        android:layout_toRightOf="@+id/commentUser"
        android:textSize="13dp"
        android:text="@string/commentDate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</RelativeLayout>