<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/colorLightGray">

    <TextView
        android:id="@+id/SportCenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/neutralText"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/SportName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SportCenterName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/neutralText"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp" />
    <TextView
        android:id="@+id/FriendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SportName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/neutralText"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/ReservationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FriendName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/neutralText"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/Period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ReservationDate"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/neutralText"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp" />


    <Button
        android:id="@+id/btnPrihvati"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#556B2F"
        android:gravity="center"
        android:text="@string/accept"
        android:textColor="@color/colorTextBlack" />

    <Button
        android:id="@+id/btnOdbij"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPrihvati"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:background="#B22222"
        android:gravity="center"
        android:text="@string/reject"
        android:textColor="@color/colorTextBlack" />

</RelativeLayout>